--- a/001basics/index.html
+++ b/001basics/index.html
@@ -3,33 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-<style type="text/css">
-	*{
-		margin:0;
-		padding:0;
-	}
-	.head{
-		height:50px;
-		line-height:50px;
-		font-weight:bold;
-		font-size:16px;
-		text-align:center;
-		color:yellow;
-	}
-	a{
-		text-decoration:none;
-	}
-	a:hover{
-		text-decoration:underline;
-	}
-</style>
+
 </head>
 
 <body>
-<div class="head">
-妙味课堂 -<a href="#"> www.miaov.com</a> - 用『鼠标滚轮』及『左右键』切换图片 - 但前图片是第一张 
-</div>
-<img src="file:///F:/%E5%89%8D%E7%AB%AF%E5%BC%80%E5%8F%91%E9%9C%80%E6%B1%82/4.JS%E9%AB%98%E7%BA%A7%E4%B8%93%E9%A2%98%EF%BC%9AJS%E7%BB%BC%E5%90%88%E5%BA%94%E7%94%A8%E5%AE%9E%E4%BE%8B/%E3%80%90%E8%B5%A0%E9%80%81%E3%80%91%E5%A6%99%E5%91%B3%E8%8C%B6%E9%A6%86(bbs.miaov.com)-%E7%89%B9%E6%95%88%E5%85%9C%E5%84%BF%E7%89%88%E5%9D%97%E2%80%94%E2%80%94%E7%B2%BE%E7%BE%8EJS%E6%A1%88%E4%BE%8B%E9%9B%86%E5%90%88(35%E4%B8%AAJS%E5%AE%9E%E4%BE%8B%E6%BA%90%E7%A0%81)/%E5%A6%99%E5%91%B3%E8%AF%BE%E5%A0%82%E2%80%94%E2%80%94%E7%94%A8%E9%BC%A0%E6%A0%87%E6%BB%9A%E8%BD%AE%E5%8F%8A%E5%B7%A6%E5%8F%B3%E9%94%AE%E5%88%87%E6%8D%A2%E5%9B%BE%E7%89%87/mouse_scroll/mouse_scroll/images/7.jpg"
-alt="meinv" />
+   <img src="./images/news2.jpg alt="图片"/>
+   <img src="./images/news2.jpg alt="图片"/>
+   <img src="./images/news2.jpg alt="图片"/>				     
 </body>
 </html>
