--- a/001basics/index.html
+++ b/001basics/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-   <img src="./images/news2.jpg alt="图片"/>
-   <img src="./images/news2.jpg alt="图片"/>
-   <img src="./images/news2.jpg alt="图片"/>				     
+   <img src="./images/news2.jpg" alt="图片"/>
+   <img src="./images/news2.jpg" alt="图片"/>
+   <img src="./images/news2.jpg" alt="图片"/>				     
 </body>
 </html>
