--- a/001basics/index.html
+++ b/001basics/index.html
@@ -3,10 +3,17 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-
+<style type="text/css">
+   body{
+      background-image:url("./images/news2.jpg");
+   }
+</style>
 </head>
 
 <body>
-   <img src="./images/news2.jpg" alt="图片"/>			     
+   <p1>打开看看流量</p1>
+   <p1>打开看看流量</p1>
+   <p1>打开看看流量</p1>
+   <p1>打开看看流量</p1>			     
 </body>
 </html>
